--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+bcrypt==3.2.0
 certifi==2024.8.30
+cffi==1.17.1
 click==8.1.7
 dnspython==2.7.0
 email_validator==2.2.0
@@ -16,15 +18,19 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mysql-connector-python==9.1.0
+passlib==1.7.4
+pycparser==2.22
 pydantic==2.10.1
 pydantic-settings==2.6.1
 pydantic_core==2.27.1
 Pygments==2.18.0
+PyJWT==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.17
 PyYAML==6.0.2
 rich==13.9.4
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 starlette==0.41.3
